--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <a href="#iletisim">İletişim</a>
     </nav>
     <div style="text-align:center; margin-bottom: 10px;">
-        <a href="https://github.com/burakgokcinar" target="_blank" title="GitHub"
+        <a href="https://github.com/burakgokcinarr" target="_blank" title="GitHub"
             style="margin:0 10px;display:inline-block;">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"
                 width="28" height="28" style="vertical-align:middle;filter:invert(1);">
