--- a/index.html
+++ b/index.html
@@ -411,11 +411,10 @@
     </section>
     <section id="iletisim">
         <h2>İletişim</h2>
-        <form class="contact-form"
-            onsubmit="event.preventDefault(); alert('Teşekkürler! En kısa sürede dönüş yapacağım.');">
-            <input type="text" placeholder="Adınız" required>
-            <input type="email" placeholder="E-posta" required>
-            <textarea rows="4" placeholder="Mesajınız" required></textarea>
+        <form class="contact-form" action="https://formsubmit.co/burakgokcinar@gmail.com" method="POST" onsubmit="event.preventDefault(); alert('Teşekkürler! En kısa sürede dönüş yapacağım.');">>
+            <input type="text" name="name" placeholder="Adınız" required>
+            <input type="email" name="email" placeholder="E-posta" required>
+            <textarea rows="4" name="message" placeholder="Mesajınız" required></textarea>
             <button type="submit">Gönder</button>
         </form>
     </section>
